--- a/wire-c/tests/makefile
+++ b/wire-c/tests/makefile
@@ -1,20 +1,22 @@
-UNITY_ROOT=../../../unity-master
+UNITY_ROOT=../../unity-master
 C_COMPILER=gcc
+TARGET_PATH=bin/
+OBJ_PATH=obj/
 TARGET_BASE=main
 ifeq ($(OS),Windows_NT)
 	TARGET_EXTENSION=.exe
 else
 	TARGET_EXTENSION=.out
 endif
-TARGET = $(TARGET_BASE)$(TARGET_EXTENSION)
+TARGET = $(TARGET_PATH)/$(TARGET_BASE)$(TARGET_EXTENSION)
 SRC_FILES=$(UNITY_ROOT)/src/unity.c ./main.c
 INC_DIRS=-Isrc -I$(UNITY_ROOT)/src
 SYMBOLS=-DTEST
 
 ifeq ($(OS),Windows_NT)
-	CLEANUP = del /F /Q $(TARGET) 
+	CLEANUP = del /F /Q $(TARGET_PATH)/$(TARGET) 
 else
-	CLEANUP = rm -f build/*.o ; rm -f $(TARGET)
+	CLEANUP = rm -f $(OBJ_PATH)/*.o ; rm -f $(TARGET)
 endif
 
 all: clean default
@@ -25,4 +27,3 @@ default:
 
 clean:
 	$(CLEANUP)
-
