--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: c
 compiler:
   - gcc
   - clang
-script: cd wire-c/tests && make
+script: 
+  cd wire-c/tests && make clean && make
+  cd wire-c/wire-server && make clean && make
+
+
 
