--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ compiler:
   - gcc
   - clang
 script: 
-  cd wire-c/tests && make clean && make
-  cd wire-c/wire-server && make clean && make
+  - cd wire-c/tests && make clean && make
+  - cd wire-c/wire-server && make clean && make
 
 
 
