--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 script: 
   - cd wire-c/tests && make clean && make
   - cd ..
-  - cd wire-c/wire-server && make clean && make
+  - cd wire-server && make clean && make
 
 
 
