--- a/wire-c/tests/Rakefile
+++ b/wire-c/tests/Rakefile
@@ -1,5 +1,5 @@
 =begin
-	Rakefile to compile and link the test harness
+	Rakefile to compile, link and link the test harness
 =end
 
 WIRE_PATH="../wire-server"
@@ -22,14 +22,14 @@ end
 
 objfiles = fileroots.map {|item| "obj/" + item + ".o"}
 
-file "#{EXEC}" => objfiles do
-	puts "Linking"
-    system "cc -o #{EXEC} " +  objfiles.join(" ") +  " #{LIB} > /dev/null"
-end
-
 desc "Compiles and links the test program"
 task :build => "#{EXEC}" do
 	puts "#{EXEC} is ready"
+end
+
+file "#{EXEC}" => objfiles do
+	puts "Linking"
+    system "cc -o #{EXEC} " +  objfiles.join(" ") +  " #{LIB} > /dev/null"
 end
 
 desc "Runs the test program"
