--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,12 @@ compiler:
   - gcc
   - clang
 script: 
-  - cd wire-c/wire-server && rake clean && rake build
+  - cd wire-c/wire-server
+  - rake clean
+  - rake build
   - cd ..
-  - cd tests && rake clean && rake build run
+  - cd tests
+  - rake clean
+  - rake build run
   
   
