Added listener injection

--- a/wire-c/wire-server/Rakefile
+++ b/wire-c/wire-server/Rakefile
@@ -7,7 +7,7 @@ LIB 	= "./lib/wire.a"
 
 task :default => [:build]
 
-heads = %w(wire-server.h)
+heads = %w(system-includes.h wire-server.h)
 fileroots = %w(main wire-server wire-listener)
 
 fileroots.each do |element|
