Added basic packet verification. Testing for begin_ and end_scenario

--- a/wire-c/wire-server/Rakefile
+++ b/wire-c/wire-server/Rakefile
@@ -9,7 +9,7 @@ LIB 	= "./lib/wire.a"
 
 task :default => [:build]
 
-header_files = %w(system-includes.h wire-server.h)
+header_files = %w(system-includes.h wire-server.h wire-listener.h)
 file_roots = %w(main wire-server wire-listener)
 
 file_roots.each do |element|
