--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
 script:
   - bundle
   - cd wire-c/wire-server
-  - rake build
+  - rake
   - cd ../tests
-  - rake build run
-  - ./play.sh
+  - rake
+  
