--- a/wire-c/tests/Rakefile
+++ b/wire-c/tests/Rakefile
@@ -3,7 +3,7 @@
 =end
 
 WIRE_PATH="../wire-server"
-C_FLAGS = "-I. -I../../unity-master/src -I#{WIRE_PATH}"
+C_FLAGS = "-Werror -I. -I../../unity-master/src -I#{WIRE_PATH}"
 
 EXEC = "./bin/main.out"
 LIB = "#{WIRE_PATH}/lib/wire.a"
