--- a/wire-c/tests/Rakefile
+++ b/wire-c/tests/Rakefile
@@ -9,8 +9,8 @@ C_FLAGS = "-Werror -I. -I../../unity-master/src -I#{WIRE_PATH}"
 EXEC = "./bin/main.out"
 LIB = "#{WIRE_PATH}/lib/wire.a"
 
-header_files = %w(context.h port_tests.h misc_tests.h unity_tests.h tcp_client.h)
-file_roots = %w(main ../../unity-master/src/unity context port_tests misc_tests tcp_client)
+header_files = %w(context.h port_tests.h misc_tests.h unity_tests.h tcp_client.h handle_request_tests.h)
+file_roots = %w(main ../../unity-master/src/unity context tcp_client port_tests misc_tests handle_request_tests)
 
 file_roots.each do |element|
     file "obj/#{File.basename(element)}.o" => header_files + ["#{element}.c"] do
