--- a/wire-c/tests/Rakefile
+++ b/wire-c/tests/Rakefile
@@ -9,8 +9,23 @@ C_FLAGS = "-Werror -I. -I../../unity-master/src -I#{WIRE_PATH}"
 EXEC = "./bin/main.out"
 LIB = "#{WIRE_PATH}/lib/wire.a"
 
-header_files = %w(context.h port-tests.h misc-tests.h unity-tests.h tcp-client.h handle-request-tests.h handle-step-match-tests.h)
-file_roots = %w(main ../../unity-master/src/unity context tcp-client port-tests misc-tests handle-request-tests handle-step-match-tests)
+header_files = %w(context.h
+	port-tests.h
+	misc-tests.h
+	unity-tests.h
+	tcp-client.h
+	handle-request-tests.h
+	handle-step-match-tests.h
+	buffer-tests.h)
+
+file_roots = %w(main ../../unity-master/src/unity
+	context
+	tcp-client
+	port-tests
+	misc-tests
+	handle-request-tests
+	handle-step-match-tests
+	buffer-tests)
 
 file_roots.each do |element|
     file "obj/#{File.basename(element)}.o" => header_files + ["#{element}.c"] do
