--- a/wire-c/wire-server/Rakefile
+++ b/wire-c/wire-server/Rakefile
@@ -9,8 +9,8 @@ LIB 	= "./lib/wire.a"
 
 task :default => [:build]
 
-header_files = %w(system-includes.h wire-server.h wire-listener.h)
-file_roots = %w(main wire-server wire-listener)
+header_files = %w(system-includes.h wire-server.h wire-listener.h api.h)
+file_roots = %w(main wire-server wire-listener api)
 
 file_roots.each do |element|
     file "obj/#{File.basename(element)}.o" => header_files + ["#{element}.c"] do
