--- a/wire-c/tests/Rakefile
+++ b/wire-c/tests/Rakefile
@@ -3,8 +3,9 @@
 =end
 
 WIRE_PATH="../wire-server"
+UNITY="../../unity-master/src"
 COVERAGE_FLAGS = "-fprofile-arcs -ftest-coverage"
-C_FLAGS = "-Werror -I. -I../../unity-master/src -I#{WIRE_PATH}"
+C_FLAGS = "-Werror -I. -I#{UNITY} -I#{WIRE_PATH}"
 
 EXEC = "./bin/main.out"
 LIB = "#{WIRE_PATH}/lib/wire.a"
@@ -16,7 +17,8 @@ header_files = %w(context.h
 	tcp-client.h
 	handle-request-tests.h
 	handle-step-match-tests.h
-	buffer-tests.h)
+	buffer-tests.h
+	token-handling-tests.h)
 
 file_roots = %w(main
 	../../unity-master/src/unity
@@ -26,7 +28,8 @@ file_roots = %w(main
 	misc-tests
 	handle-request-tests
 	handle-step-match-tests
-	buffer-tests)
+	buffer-tests
+	token-handling-tests)
 
 file_roots.each do |element|
     file "obj/#{File.basename(element)}.o" => header_files + ["#{element}.c"] do
